codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob4
---
• 已完成
  └ 列出 ls -la
    读取 foo.txt
