codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob6
---
• 已完成
  └ 列出 ls -la
    读取 foo.txt, bar.txt
