codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • codex-logs.log

› 1. Yes  Share the current Codex session logs with the team for
          troubleshooting.
  2. No

  按 enter 确认，或 esc 返回
