codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  启 用 完 全 访 问 ？
  当  Codex
  以 完 全 访 问 运 行 时 ， 无 需 你 的 批 准 即 可 编 辑 你 电 脑 上 的 任 何 文 件 并 运 行 带 网 络 访 问 的 命
  令 。 启 用 完 全 访 问 时 请 谨 慎 。 这 会 显 著 增 加 数 据 丢 失 、 泄 露 或 意 外 行 为 的 风 险 。

› 1. 仍 然 继 续         仅 此 会 话 启 用 完 全 访 问
  2. 继 续 并 不 再 询 问   启 用 完 全 访 问 并 记 住 该 选 择
  3. 取 消             返 回 且 不 启 用 完 全 访 问

  按  enter 确 认 ， 或  esc 返 回
