codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests.rs
expression: exec_blob
---
• 已运行 sleep 1
  └ （无输出）
